--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/cover_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="128dp"
+        android:layout_height="256dp"
         android:src="@drawable/sample_image"/>
 
     <LinearLayout
