--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,8 +7,8 @@
     <ImageView
         android:id="@+id/cover_image"
         android:layout_width="128dp"
-        android:layout_height="256dp"
-        android:src="@drawable/sample_image"/>
+        android:layout_height="200dp"
+        android:scaleType="fitStart"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
             android:id="@+id/title"
             android:text="@string/sample_title"
             android:textSize="16dp"
-            android:padding="8dp"
+            android:paddingLeft="8dp"
             android:textStyle="bold"
             android:textColor="#dc143c"/>
 
@@ -45,12 +45,26 @@
                 android:text="@string/author_name_sample" />
         </LinearLayout>
 
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:background="@drawable/shape_description_button"
+            android:layout_marginLeft="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="description"
+            android:textColor="#F8F8FF"
+            android:textSize="12dp"/>
+
         <Button
             android:id="@+id/preview"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="32dp"
             android:text="@string/preview"
-            android:paddingLeft="8dp"/>
+            android:layout_marginLeft="8dp"
+            android:textSize="12dp"
+            android:background="@drawable/shape_preview_button"
+            android:textColor="	#F8F8FF"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -80,7 +94,8 @@
             android:text="@string/click_to_download"
             android:textStyle="bold"
             android:textColor="#0000ff"
-            android:padding="8dp"/>
+            android:paddingLeft="8dp"
+            android:paddingBottom="8dp"/>
 
     </LinearLayout>
 
