--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -47,6 +47,7 @@
 
 
         <Button
+            android:id="@+id/description_button"
             android:layout_width="wrap_content"
             android:layout_height="32dp"
             android:background="@drawable/shape_description_button"
