--- a/app/src/main/res/layout/content_description.xml
+++ b/app/src/main/res/layout/content_description.xml
@@ -8,11 +8,31 @@
     tools:context=".DescriptionActivity"
     tools:showIn="@layout/activity_description">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="16dp"
+        android:orientation="vertical">
+
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/title_text_view"
+        android:text="@string/sample_title"
+        android:textSize="16dp"
+        android:paddingBottom="8dp"
+        android:textStyle="bold"
+        android:textColor="#dc143c"/>
+
     <TextView
         android:id="@+id/description_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
         android:text="@string/large_text" />
+
+    </LinearLayout>
+
 
 </android.support.v4.widget.NestedScrollView>
