fix: empty keyword

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,9 +29,10 @@
         <Button
             android:id="@+id/search_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="36dp"
             android:layout_weight="0"
-            android:text="@string/search"/>
+            android:text="@string/search"
+            android:background="@drawable/shape_search_button" />
 
     </LinearLayout>
 
